2015-09-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-296

	* doc/uguide/wfuns.tex (subsection{Common practicalities}):
	Removed comments arouind logrel, as this optioon has been removed.
	(subsubsection{General case}): Added comment making clear that the
	bulk of the text are just notes for possible future changes.

2015-09-03  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-295

	* src/global_data.h: Add missing ifdef.

	* src/optproperties.cc (pha_mat_labCalc):

	Avoid warning about shadowing a global variable on some compilers by
	renaming ANGTOL to ANGTOL_RAD. Reported by Richard.

2015-09-31  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-294
	
	* src/m_linerecord.cc:  Added simple explorative setup scripts for f_grid
	that are based on the lines in the line database.

2015-09-01  Manfred Brath  <manfred.brath@uni-hamburg.de>

	* arts-2-3-299

	* src/cloudbox.{h,cc} (pnd_fieldS2M), 
	src/m_cloudbox.cc (pnd_fieldCalcFromscat_speciesFields): 
	
	Added two moment scheme distributions that uses scat_species_mean_mass_field 
	Removed redundant string variable "psd"
	
	* src/m_cloudbox.cc (dNdD_S2M_M),
	src/methods.cc: 
	
	Added new WSMs for the new distributions.

2015-09-01  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-298

	* src/lin_alg.* (solve): Added convenience wrapper for the solution of
	linear systems.

	* src/oem.h (Forward Model): Interface class for forward models.

	* src/oem.cc (oem_gauss_newton): Implemented Gauss-Newton method
	for non-linear inverse problems.

	* src/oem.cc (oem_gauss_newtom_n_form): Implemented N-form of the
	Gauss-Newton method.

	* src/oem.cc (oem_gauss_newtom_m_form): Implemented M-form of the
	Gauss-Newton method.

	* src/oem.cc (oem_levenberg_marquardt): Implemented Levenberg-Marquardt
	method for non-linear inverse problems.

	* src/oem_test.cc (test_oem_gauss_newton): Randomized testing of
	the oem_gauss_newton, oem_gauss_newton_n_form and oem_gauss_newton_m_form
	functions.
