@@ -1,3 +1,12 @@
+2015-09-08  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-297
+
+	* src/sensor.cc (find_effective_channel_boundaries):
+
+	Add runtime error with (hopefully) helpful error message if no
+	passbands are detected.
+
 2015-09-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-296
